<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activity.PeticaActivity">

        <Button
            android:id="@+id/btn_feed_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualFeed" />

        <Button
            android:id="@+id/btn_feed_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoFeed" />

        <Button
            android:id="@+id/btn_water_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualWater" />

        <Button
            android:id="@+id/btn_water_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoWater" />

        <Button
            android:id="@+id/btn_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoMode" />

        <Button
            android:id="@+id/btn_lamp_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turnOnLamp" />

        <Button
            android:id="@+id/btn_lamp_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turnOffLamp" />

        <Button
            android:id="@+id/btn_status_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reqStatus" />

        <Button
            android:id="@+id/btn_clock_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setTime" />

        <Button
            android:id="@+id/btn_initialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset" />


    </LinearLayout>

</layout>
