<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_gallery_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getGalleryPhoto" />

        <Button
            android:id="@+id/btn_gallery_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getGalleryVideo" />

        <Button
            android:id="@+id/btn_app_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getAppPhoto" />

        <Button
            android:id="@+id/btn_app_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getAppVideo" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</layout>